--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                 <div class="stoper">
                     <p id="time">Time</p>
                     <button class="display">Stop</button>
-                    <button>Start</button>
-                    <div id="timeLoad" class="timeLoad">
+                    <button id="startTimer">Start</button>
+                    <form id="timeLoad" class="timeLoad">
                         <input type="text" placeholder="Hour">
                         <input type="text" placeholder="Min">
                         <input type="text" placeholder="Sek">
-                    </div>
-                    <button>Restart</button>
+                    </form>
+                    <button id="resetTimer">Restart</button>
                 </div>
             </div>
         </div>
