Button Play Stop Set. Time view on page.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             <div id="tab1" class="page display">
                 <h2>Timer</h2>
                 <div class="stoper">
-                    <p id="time">Time</p>
-                    <button class="display">Stop</button>
-                    <button id="startTimer">Start</button>
+                    <p id="meter">Time</p>
+                    <button id="stopTimer" class="display">Stop</button>
+                    <button id="startTimer">Play</button>
+                    <button id="setTime">Set</button>
                     <form id="timeLoad" class="timeLoad">
                         <input type="text" placeholder="Hour">
                         <input type="text" placeholder="Min">
