Now you can select the sound alarm.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <h2>Timer</h2>
                 <button id="soundMenuBt" class="setSound"></button>
                 <div id="soundMenu" class="soundWrap display">
-                    <label><input type="radio" name="sound" checked="checked">Audio 1</label>
-                    <label><input type="radio" name="sound">Audio 2</label>
-                    <label><input type="radio" name="sound">Audio 3</label>
+                    <label><input type="radio" name="sound" checked="checked" value="0">Audio 1</label>
+                    <label><input type="radio" name="sound" value="1">Audio 2</label>
+                    <label><input type="radio" name="sound" value="2">Audio 3</label>
                 </div>
                 <div class="stoper">
                     <div>
