Fixed sound problems. Remove 'EventLisner' from the radio field manu.

--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
                         <div id="consoleEndTime" class="alarmModal display">
                             <p>Allert</p>
                             <div class="alertControl">
-                               <button id="stopSound" class="stopSound alarmBt">st</button> <!-- znaleść rozwiązania i dowiedzieć się dlaczego (st)-->
                                 <button id="napBt" class="napBt alarmBt">Nap</button>
                                 <select id="getNap" class="napIn">
                                     <option value = "5">05 min</option>
                                     <option value = "10">10 min</option>
                                     <option value = "15">15 min</option>
                                 </select>
-                                <button class="closeBt"></button>
+                                <button id="stopSound" class="closeBt"></button>
                             </div>
                         </div>
                     </div>
